--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(function() {
 </head>
 <body>
 <section class="topdiv markdown">
-glug: "to make the sound of liquid pouring from a bottle"
+glug: "to make the sound of liquid pouring from a bottle!"
 </section>
 <div class="flexcontainer">
 	<section class="centerdiv">
