--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.4.0/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>-->
+<script src="https://rawgit.com/provolot/lazyYT/master/lazyYT.js">
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <script>
 var getUrlValue = function(VarSearch){
@@ -60,6 +61,10 @@ section {
     padding: 5px 0px;
     margin: 20px 10px;
 }
+
+.video {
+    max-width: 100%;
+}
 </style>
 
 <!-- 
@@ -76,7 +81,7 @@ $(function() {
 	$(".markdown").each(function(i) {
 		$(this).html(converter.makeHtml($(this).html()));
 	});
-	//JAVASCRIPT HERE
+    $('.lazyYT').lazyYT();
 });
 </script>
 
@@ -87,15 +92,23 @@ $(function() {
 </head>
 <body>
 <section class="topdiv markdown">
-glug: "to make the sound of liquid pouring from a bottl?e!"
+glug: "to make the sound of liquid pouring from a bottle"
 </section>
 <div class="flexcontainer">
 	<section class="centerdiv">
 		<div class="posts">
 
 <div class="post markdown">
-**160601 START**
+160607 brick test
 
+<iframe src="https://player.vimeo.com/video/169636662" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/169636662">brick_test_1</a> from <a href="https://vimeo.com/provolot">provolot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+password: "bricksbricks".
+</div>
+
+<div class="post markdown">
+**160601 START**
 </div>
 
         </div>
