--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ $(function() {
 
 <style type="text/css">
 .centerdiv {
+    height: 100%;
 }
 </style>
 </head>
@@ -97,6 +98,14 @@ glug: "to make the sound of liquid pouring from a bottle"
 <div class="flexcontainer">
 	<section class="centerdiv">
 		<div class="posts">
+
+<div class="post markdown">
+160610 GameTrak test
+
+<iframe src="https://player.vimeo.com/video/170113428" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/170113428">Grasshopper GameTrak Test</a> from <a href="https://vimeo.com/provolot">provolot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+</div>
 
 <div class="post markdown">
 160607 brick test
