uploaded GangGang example

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@ section {
 .video {
     max-width: 100%;
 }
+
+.post * {
+    max-width: 100%;
+}
 </style>
 
 <!-- 
@@ -100,7 +104,14 @@ glug: to make the sound of liquid pouring from a bottle
 		<div class="posts">
 
 <div class="post markdown">
-160610 GameTrak test
+160610 GangGang - sending data from GhPython (IronPython) to another computer's normal Python over Sockets
+
+<img src="https://github.com/provolot/GangGang/raw/master/MEDIA/example_addition.gif">
+
+</div>
+
+<div class="post markdown">
+160609 GameTrak test
 
 <iframe src="https://player.vimeo.com/video/170113428" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/170113428">Grasshopper GameTrak Test</a> from <a href="https://vimeo.com/provolot">provolot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
