--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ glug: to make the sound of liquid pouring from a bottle
 		<div class="posts">
 
 <div class="post markdown">
+160612 GangGang - 
+Voxel-based 3D ML classification - prototype 1
+
+<iframe width="420" height="315" src="https://www.youtube.com/embed/pn8yuOofb4U" frameborder="0" allowfullscreen></iframe>
+
+</div>
+
+<div class="post markdown">
 160610 GangGang - sending data from GhPython (IronPython) to another computer's normal Python over Sockets
 
 <img src="https://github.com/provolot/GangGang/raw/master/MEDIA/example_addition.gif">
