--- a/index.html
+++ b/index.html
@@ -2,122 +2,41 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
+<link href='CSSJS/glug.css' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.4.0/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>-->
-<script src="https://rawgit.com/provolot/lazyYT/master/lazyYT.js">
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+<script src="https://rawgit.com/provolot/lazyYT/master/lazyYT.js"></script>
+<script src="CSSJS/utilities.js"></script>
 <script>
-var getUrlValue = function(VarSearch){
-    var SearchString = window.location.search.substring(1);
-    var VariableArray = SearchString.split('&');
-    for(var i = 0; i < VariableArray.length; i++){
-        var KeyValuePair = VariableArray[i].split('=');
-        if(KeyValuePair[0] === VarSearch){
-            return KeyValuePair[1];
+   
+var generateMenu = function() {
+    $("glugtitle").each(function() {
+        var this_title = $(this).html();
+        var date_regexp = /([0-9]{6}).*/g;
+        var match = date_regexp.exec(this_title);
+        if(match != undefined)  {
+            var date = match[1];
+            $(this).attr("id", date);
+            $("<gluglink><a href=#" + date + ">" + this_title + "</gluglink>").appendTo("#menu");
         }
-    }
+    });
 }
-</script>
-<style type="text/css">
-body {
-	margin: 0px;
-	padding: 0px;
-	height: 100%;
-    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-    font-size: 0.9em;
-}
-.flexcontainer {
-	height:100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
-
-section {
-    padding: 10px;
-}
-
-.topdiv {
-    text-align: center;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eec9fc+0,afefff+100 */
-    background: #eec9fc; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #eec9fc 0%, #afefff 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg,  #eec9fc 0%,#afefff 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg,  #eec9fc 0%,#afefff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eec9fc', endColorstr='#afefff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-}
-
-.posts {
-    width: 90vw;
-    max-width: 600px;
-}
-.post {
-    border-top: 5px solid black;
-    padding: 5px 0px;
-    margin: 20px 10px;
-    margin-left: 200px; 
-}
-
-.video {
-    max-width: 100%;
-}
-
-.post * {
-    max-width: 100%;
-}
-
-.centerdiv {
-    height: 100%;
-}
-glugtitle {
-    background-color: black;
-    color: white;
-    float: left;
-    margin-left: -200px;
-    width: 180px;
-    padding: 3px 5px;
-    display: block;
-}
-
-@media screen and (max-width: 692px)   {
-    glugtitle {
-        width: 100% !important;   
-        margin-left: 0px;
-        float:none;
-    }
-    .post {
-        margin-left: 0px;
-    }   
-}
-</style>
-
-<!-- 
-///////////////
-CUSTOMIZE BELOW
-///////////////
- -->
-
-<title>!GLUG?</title>
-
-<script>
 $(function() {
-	var converter = new showdown.Converter();
-	$(".markdown").each(function(i) {
-		$(this).html(converter.makeHtml($(this).html()));
-	});
-    $('.lazyYT').lazyYT();
+//    generateMenu();
 });
 </script>
+<title>!GLUG?</title>
 
 </head>
 <body>
 <section class="topdiv markdown">
 glug: to make the sound of liquid pouring from a bottle
+</section>
+<section id="menu" class= "markdown">
 </section>
 <div class="flexcontainer">
 	<section class="centerdiv">
@@ -186,7 +105,7 @@ See below or example_gh3d.ghx for example usage.
 <div class="post markdown">
 <glugtitle>160610 GangGang - sending data from GhPython (IronPython) to another computer's normal Python over Sockets</glugtitle>
 
-<img src="https://github.com/provolot/GangGang/raw/master/MEDIA/160610_example_addition.gif">
+<img src="https://github.com/provolot/glug.dantaeyoung.com/raw/master/MEDIA/160610_example_addition.gif">
 
 </div>
 
@@ -199,7 +118,7 @@ See below or example_gh3d.ghx for example usage.
 </div>
 
 <div class="post markdown">
-160607 brick test
+<glugtitle>160607 brick test</glugtitle>
 
 <iframe src="https://player.vimeo.com/video/169636662" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/169636662">brick_test_1</a> from <a href="https://vimeo.com/provolot">provolot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -208,7 +127,7 @@ password: "bricksbricks".
 </div>
 
 <div class="post markdown">
-<glugtitle>**160601 START**</glugtitle>
+<glugtitle>160601 START</glugtitle>
 
 prototypes.
 </div>
