--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ glug: to make the sound of liquid pouring from a bottle
 <div class="post markdown" id="160617">
 <glugtitle>160617 GangGang package and documentation</glugtitle>
 
-# GangGang 
-## [강강술래 / Ganggangsullae](https://en.wikipedia.org/wiki/Ganggangsullae)
+# [GangGang](https://github.com/provolot/GangGang)
 ![GangGang](https://raw.githubusercontent.com/provolot/GangGang/master/ganggangsullae.jpg)
+*강강술래 / Ganggangsullae dance*
+
 
 GangGang is a simple single-file module to use a remote server to execute code, mainly for GhPython/IronPython in Grasshopper3D.
 This allows us to work around the lack of easy module installation in IronPython -- allowing, for example, Numpy, Scipy, Keras, etc. to be used.
