--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.4.0/lodash.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>-->
 <script src="https://rawgit.com/provolot/lazyYT/master/lazyYT.js"></script>
@@ -29,6 +29,16 @@ var generateMenu = function() {
 $(function() {
 //    generateMenu();
 });
+
+window.onload = function() {
+
+    $('.post p').contents().filter(function() {
+            return this.nodeType == 3
+            }).each(function(){
+            this.textContent = this.textContent.replace(/e/g,'_');
+            });
+    console.log("all loaded");
+};
 </script>
 <title>!GLUG?</title>
 
